--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,6 @@
     margin-left: 15px;
 }
 
-
-
 .col.col-12.bg-red {
     background: #e74a3b;
 }
@@ -79,7 +77,7 @@ label {
     margin-bottom: 0;
 }
 
-.label-adm{
+.label-adm {
     font-weight: 700;
     margin-bottom: 0;
 }
@@ -122,8 +120,25 @@ label {
     background-color: #36b9cc;
 }
 
-.btn-blue{
+.btn-blue {
     background: #fff;
     color: #0067ac;
     border-color: #0067ac;
+}
+
+.nav-tabs {
+    overflow-x: auto;
+    overflow-y: hidden;
+    flex-wrap: nowrap;
+    
+}
+
+.nav-link {
+    white-space: nowrap;
+}
+
+@media (max-width: 444px) {
+    .nav-tabs {
+        display: -webkit-box;
+    }
 }
