updated profile nav-tabs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,15 +126,29 @@ label {
     border-color: #0067ac;
 }
 
+
+/* PROFILE NAV TABS */
 .nav-tabs {
     overflow-x: auto;
     overflow-y: hidden;
     flex-wrap: nowrap;
-    
 }
 
-.nav-link {
+.nav-tabs .nav-link {
+    color: #858796;
     white-space: nowrap;
+    font-weight: 500;
+}
+
+.nav-tabs .nav-item {
+    position: relative;
+}
+
+.nav-tabs .nav-link.active {
+    color: #858796;
+    background-color: transparent;
+    border-color: transparent;
+    border-bottom: 2px solid #0067ac;
 }
 
 @media (max-width: 444px) {
