--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,6 +155,18 @@ label {
     border-bottom: 2px solid #0067ac;
 }
 
+.text-black{
+    color: black;
+}
+
+.fa-times{
+    color: red;
+}
+
+.btn-bg-blue .fa-plus{
+    color: #fff;
+}
+
 @media (max-width: 444px) {
     .nav-tabs {
         display: -webkit-box;
