--- a/assets/css/loginStyles.css
+++ b/assets/css/loginStyles.css
@@ -146,7 +146,7 @@ label {
     font-size: 13px;
 }
 
-@media (max-width: 575px) and (max-height: 1000px){
+@media (max-width: 575px) and (max-height: 1000px), (max-height: 647px){
     .footer {
         position: relative;
     }
