--- a/assets/css/loginStyles.css
+++ b/assets/css/loginStyles.css
@@ -44,7 +44,8 @@ body {
 .form-title {
     font-size: 22px;
     font-weight: 500;
-    color: #0067ac;
+    /* color: #0067ac; */
+    color: #333;
     margin-bottom: 0;
 }
 
@@ -55,6 +56,7 @@ body {
 .form-link{
     font-size: 15px;
     font-weight: 500;
+    color: #0067ac;
 }
 
 .card-login-form {
