--- a/assets/css/register-styles.css
+++ b/assets/css/register-styles.css
@@ -34,6 +34,18 @@ body {
 
 /* CONTENT */
 
+.btn-bg-blue {
+    color: #fff;
+    background-color: #0067ac;
+    border-color: #0067ac;
+}
+
+.btn-bg-blue:hover {
+    color: #fff;
+    background-color: #003d7c;
+    border-color: #003d7c;
+}
+
 .container-card {
     margin-top: 60px;
 }
@@ -141,6 +153,7 @@ label {
     font-size: 12px;
     font-weight: 500;
     background: #0067ac;
+    border-radius: 4px;
 }
 
 .hr-white {
