--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,8 +48,20 @@
     border-color: #0067ac;
 }
 
+.btn-action-1:hover {
+    background-color: #0067ac;
+    color: #fff;
+    border-color: #0067ac;
+}
+
 .btn-action-2 {
     color: #e74a3b;
+    border-color: #e74a3b;
+}
+
+.btn-action-2:hover {
+    background-color: #e74a3b;
+    color: #fff;
     border-color: #e74a3b;
 }
 
@@ -69,7 +81,15 @@
     border-radius: 4px;
     font-size: 15px;
     background-color: #0067ac;
+    border-color: #0067ac;
     width: 100%;
+    color: #fff;
+}
+
+.btn-add-admission:hover {
+    color: #fff;
+    background-color: #003d7c;
+    border-color: #003d7c;
 }
 
 .card-border-left {
@@ -102,6 +122,12 @@ label {
     color: #fff;
     background-color: #0067ac;
     border-color: #0067ac;
+}
+
+.btn-bg-blue:hover {
+    color: #fff;
+    background-color: #003d7c;
+    border-color: #003d7c;
 }
 
 .bg-strata-1 {
@@ -155,15 +181,19 @@ label {
     border-bottom: 2px solid #0067ac;
 }
 
-.text-black{
+.text-black {
     color: black;
 }
 
-.fa-times{
+.text-blue {
+    color: #0067ac;
+}
+
+.fa-times {
     color: red;
 }
 
-.btn-bg-blue .fa-plus{
+.btn-bg-blue .fa-plus {
     color: #fff;
 }
 
