updated profile form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,6 +197,10 @@ label {
     color: #fff;
 }
 
+.hidden{
+    display: none;
+}
+
 @media (max-width: 444px) {
     .nav-tabs {
         display: -webkit-box;
