--- a/assets/css/login-styles.css
+++ b/assets/css/login-styles.css
@@ -17,6 +17,7 @@ body {
 
 .bg-gradient {
     background-color: #0067ac;
+    background: linear-gradient(90deg, #0067ac 0%, #00a3e3 100%);
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,19 +33,17 @@ body {
     background-color: #fff;
 }
 
+/* FONT */
+
+.text-blue {
+    color: #0067ac;
+}
+
+.text-gray {
+    color: gray;
+}
+
 /* CONTENT */
-
-.btn-bg-blue {
-    color: #fff;
-    background-color: #0067ac;
-    border-color: #0067ac;
-}
-
-.btn-bg-blue:hover {
-    color: #fff;
-    background-color: #003d7c;
-    border-color: #003d7c;
-}
 
 .container-card {
     margin-top: 60px;
@@ -63,9 +62,7 @@ body {
 }
 
 .form-link {
-    font-size: 15px;
-    font-weight: 500;
-    color: #0067ac;
+    font-weight: 700;
 }
 
 .card-login-form {
@@ -110,7 +107,7 @@ body {
     right: 15px;
     background: #fff;
     color: #0067ac;
-    font-weight: 500;
+    font-weight: 700;
     border-radius: 4px;
     padding: 5px;
 }
@@ -149,11 +146,19 @@ label {
     font-weight: 500;
 }
 
-.btn-login {
+.btn-action {
+    color: #fff;
     font-size: 12px;
-    font-weight: 500;
-    background: #0067ac;
+    font-weight: 700;
+    background-color: #0067ac;
+    border-color: #0067ac;
     border-radius: 4px;
+}
+
+.btn-action:hover {
+    color: #fff;
+    background-color: #003d7c;
+    border-color: #003d7c;
 }
 
 .hr-white {
@@ -161,6 +166,7 @@ label {
 }
 
 /* OVERLAY */
+
 .overlay {
     position: absolute;
     border-radius: 4px;
@@ -172,8 +178,12 @@ label {
     width: 100%;
     /* opacity: 20%; */
     transition: .5s ease;
-    background-color: rgba(0,0,0,0.2);
-  }
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.overlay:hover{
+    background-color: rgba(0, 0, 0, 0.4);
+}
 
 /* FOOTER */
 
@@ -182,7 +192,8 @@ label {
     position: absolute;
     font-weight: normal;
     bottom: 0;
-    background: #00a3e3;
+    /* background: #00a3e3; */
+    background: transparent;
     width: 100%;
     height: 60px;
     line-height: 60px;
