--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,20 @@
     text-decoration: none;
 }
 
+/* ADMISSION CARD */
+.card-over{
+    overflow: auto;
+}
+
+.admission-card-item{
+    max-width: 300px;
+    min-height: 300px;
+    min-width: 300px;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+}
+
 .admission-id {
     font-size: 15px;
     /* color: #0067ac; */
@@ -41,11 +55,11 @@
 }
 
 .btn-action-1 {
-    /* background-color: #0067ac; */
     background: transparent;
     color: #0067ac;
-    /* color: #fff; */
     border-color: #0067ac;
+    font-weight: 700;
+    font-size: 13px;
 }
 
 .btn-action-1:hover {
@@ -57,6 +71,8 @@
 .btn-action-2 {
     color: #e74a3b;
     border-color: #e74a3b;
+    font-weight: 700;
+    font-size: 13px;
 }
 
 .btn-action-2:hover {
@@ -80,11 +96,12 @@
 
 .btn-add-admission {
     border-radius: 4px;
-    font-size: 15px;
+    font-size: 13px;
     background-color: #0067ac;
     border-color: #0067ac;
     width: 100%;
     color: #fff;
+    font-weight: 700;
 }
 
 .btn-add-admission:hover {
@@ -203,6 +220,29 @@ label {
 }
 
 /* PRODI */
+
+/* SCROLL */
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #0067ac; 
+    border-radius: 4px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #00a3e3; 
+  }
 
 #btn-pilihan-2:not([href]) {
     color: #fff;
