--- a/assets/css/login-styles.css
+++ b/assets/css/login-styles.css
@@ -49,6 +49,16 @@ body {
     margin-top: 60px;
 }
 
+/* FROM INPUT */
+.form-control:focus{
+    background-color: #fff;
+    border: 2px solid #00a3e3;
+    border-radius: 4px;
+    outline: 0;
+    /* box-shadow: 0 0 0 0.2rem rgba(78,115,223,.25); */
+    box-shadow: none;
+}
+
 .form-title {
     font-size: 22px;
     font-weight: 500;
