updated nilai table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,11 @@
     border-bottom: 3px solid #0067ac;
 }
 
+/* FONT 13 */
+.font-size-13{
+    font-size: 13px;
+}
+
 /* ADMISSION CARD */
 
 .card-over {
