--- a/assets/css/login-styles.css
+++ b/assets/css/login-styles.css
@@ -171,6 +171,41 @@ label {
     border-color: #003d7c;
 }
 
+.btn-action-white {
+    color: #0067ac;
+    font-size: 12px;
+    font-weight: 700;
+    background-color: #fff;
+    border-color: #fff;
+    border-radius: 4px;
+}
+
+.btn-action-white:hover {
+    color: #0067ac;
+    background-color: #ccc;
+    border-color: #ccc;
+}
+
+.btn-action-danger {
+    color: #e74a3b;
+    font-size: 12px;
+    font-weight: 700;
+    background-color: #fff;
+    border-color: #fff;
+    border-radius: 4px;
+}
+
+.btn-action-danger:hover {
+    color: #e74a3b;
+    background-color: #ccc;
+    border-color: #ccc;
+}
+
+.btn-responsive{
+    width: 100%;
+    /* max-width: 200px; */
+}
+
 .hr-white {
     border: 1px solid white;
 }
@@ -208,6 +243,44 @@ label {
     height: 60px;
     line-height: 60px;
     font-size: 13px;
+}
+
+/* SCROLL */
+
+/* width */
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+/* Track */
+
+::-webkit-scrollbar-track {
+    /* background: #f1f1f1; */
+    background: #00a3e3;
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+    background: #fff;
+    border-radius: 4px;
+}
+
+/* Handle on hover */
+
+::-webkit-scrollbar-thumb:hover {
+    background: #cccccc;
+}
+
+/* PERSONAL DATA */
+.container-personal-data{
+    max-width: 1000px;
+}
+
+.form-check label {
+    font-size: 15px;
 }
 
 @media (max-width: 575px) and (max-height: 1000px), (max-height: 647px) {
