--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,7 +243,7 @@ label {
     color: #5a5c69;
     white-space: nowrap;
     font-weight: 700;
-    font-size: 13px;
+    font-size: 10px;
 }
 
 .nav-tabs .nav-item {
@@ -317,6 +317,18 @@ label {
 
 #btn-pilihan-2:not([href]) {
     color: #fff;
+}
+
+/* PROFILE NAV TAB */
+.profile-nav{
+    background-color: #fff;
+    border: none;
+    border-radius: 4px;
+}
+
+.profile-nav .nav-link:hover{
+    border-color: transparent;
+    color: #0067ac;
 }
 
 @media (max-width: 444px) {
